--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<li><a href="#" class="button primary">Activate</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Resume</a>
+						<a href="#one" class="more scrolly">Résumé</a>
 					</section>
 
 				<!-- One -->
