--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 							<header class="major">
 								<h2>Experience/Work<br />
 								</h2>
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								<p><li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
+								Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
