--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
 							<p>Another fine responsive<br />
 							site template freebie<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<!--<li><a href="#" class="button primary">LinkedIn</a></li>-->
+								<button class="btn btn-success" onclick=" window.open('http://google.com','_blank')"> Google</button>
 							</ul>
+							
 						</div>
 						<a href="#one" class="more scrolly">Résumé</a>
 					</section>
