--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							
 							<ul class="actions special">
 								<!--<li><a href="#" class="button primary">LinkedIn</a></li>-->
-								<button class="btn btn-success" onclick=" window.open('http://google.com','_blank')"> Google</button>
+								<button class="btn btn-success" onclick=" window.open('https://www.linkedin.com/in/jonathan-kim-1b0046241/','_blank')"> LinkedIn</button>
 							</ul>
 							
 						</div>
