--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<h2>Experience/Work<br/>
 								</h2>
 								<ul style="list-style-image: url('/theme/css/icons/image-editor.png');">
-									 <li>Cosmosus</li>
+									 <li>CosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosusCosmosus</li>
 									 <li>CTY</li>
 									 <li>Nutz</li>
 								</ul>
