--- a/elements.html
+++ b/elements.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
 	</head>
 	<body class="is-preload">
 
@@ -336,7 +337,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h5>Fit</h5>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-12"><span class="image fit"><img src="images/banner.jpg" alt="" /><filter: blur(5px)></span></div>
+											<div class="col-12"><span class="image fit"><img src="images/banner.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
